--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,10 @@
             <groupId>com.jayway.jsonpath</groupId>
             <artifactId>json-path</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+        </dependency>
     </dependencies>
     <properties>
         <org.mapstruct.version>1.2.0.Final</org.mapstruct.version>
