--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,7 +22,7 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 # Mail configuration
 spring.mail.host = smtp.gmail.com
 spring.mail.port = 587
-spring.mail.username = CorpFoodInc
+spring.mail.username = corpfoodinc
 spring.mail.password = ZAQ!2wsx
 spring.mail.properties.mail.smtp.auth = true
 spring.mail.properties.mail.smtp.starttls.enable = true
