--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,10 @@
             <groupId>org.assertj</groupId>
             <artifactId>assertj-core</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
     </dependencies>
     <properties>
         <org.mapstruct.version>1.2.0.Final</org.mapstruct.version>
