--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,3 +27,5 @@ spring.mail.password = ZAQ!2wsx
 spring.mail.properties.mail.smtp.auth = true
 spring.mail.properties.mail.smtp.starttls.enable = true
 spring.mail.properties.mail.smtp.starttls.required=false
+java.runtime.version=zulu-1.8.0_144
+maven.version=3.3.9
