--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,7 @@
 # "root" as username and password.
 spring.datasource.url = jdbc:mysql://localhost:3306/corpfood
 spring.datasource.username = root
+server.port=${PORT:3306}
 spring.datasource.password =
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 # Keep the connection alive if idle for a long time (needed in production)
