--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,7 @@
 # DataSource settings: set here your own configurations for the database
 # connection. In this example we have "netgloo_blog" as database name and
 # "root" as username and password.
-spring.datasource.url = jdbc:mysql://localhost:3306/corpfood
-spring.datasource.username = root
-spring.datasource.password =
+spring.datasource.url = mysql://b5e6f28d77f1d7:c50b12c66c06182@us-iron-auto-dca-01-a.cleardb.net/heroku_0f2a3a27d6fc052?reconnect=true
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 # Keep the connection alive if idle for a long time (needed in production)
 #spring.datasource.testWhileIdle = true
